Define new method `isModifiable()`